* Fixed utility buttons taking up too much horizontal space on mobile. * To-Do: Find a better way to display these buttons on mobile.

--- a/Financial_Planning_MVC/wwwroot/css/vuejs/goals.css
+++ b/Financial_Planning_MVC/wwwroot/css/vuejs/goals.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: flex-end;
     margin: 0 0.5rem 0.5rem 0;
-    position: sticky;
+    position: absolute;
     right: 0;
 }
 
@@ -32,9 +32,7 @@
     flex: 1;
     margin: 0rem 1rem 0 1rem;
     overflow: scroll;
-    /* Fixes an issue where the margins of the goals-container escapes the window. 
-    TODO: Figure out the cause of this.*/
-    width: 97%;
+    width: 100%;
 }
 
 .Goals.page-container .goals-container .no-goals-container {
@@ -77,7 +75,7 @@
     box-shadow: 3px 3px 3px var(--box-shadow);
     font-size: 1.25rem;
     margin: 0.5rem;
-    max-width: 50rem;
+    max-width: 35rem;
     text-align: center;
     width: 100%;
 }
